Fix issue where keyboard could hide behind the toolbar

--- a/public/app/styles/ice/flyout_tools.less
+++ b/public/app/styles/ice/flyout_tools.less
@@ -99,7 +99,7 @@ table.layout-select tr td>div.grid-select-active {
 #shape_cats {
   min-width: 55px;
   display: block;
-  position: absolute;
+  position: static;
   left: 0;
   top: 0;
   height: 210px;
